--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "density-debris",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/react": "^4.4.2",
-    "@astrojs/sitemap": "^3.7.0",
-    "astro": "^5.16.15",
-    "astro-icon": "^1.1.5",
-    "bulma": "^1.0.4",
-    "react": "^19.2.4",
-    "react-dom": "^19.2.4",
-    "sass": "^1.97.3",
-    "swiper": "^12.0.3"
-  }
+	"name": "well-sorted",
+	"type": "module",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "astro dev",
+		"build": "astro build",
+		"preview": "astro preview",
+		"astro": "astro"
+	},
+	"dependencies": {
+		"@astrojs/react": "^4.4.2",
+		"@astrojs/sitemap": "^3.7.0",
+		"astro": "^5.16.15",
+		"astro-icon": "^1.1.5",
+		"bulma": "^1.0.4",
+		"react": "^19.2.4",
+		"react-dom": "^19.2.4",
+		"sass": "^1.97.3",
+		"swiper": "^12.0.3"
+	}
 }
